0012494: avoid line break in col headers
Reviewed-on: http://gerrit.tine20.com/customers/4054
Tested-by: Jenkins CI (http://ci.tine20.com/)
Tested-by: Philipp Schüle <p.schuele@metaways.de>

--- a/tine20/Tinebase/css/Tinebase.css
+++ b/tine20/Tinebase/css/Tinebase.css
@@ -765,7 +765,7 @@ html, body {
     white-space: nowrap;
 }
 
-.tw-activities-grid .x-grid3-cell-inner, .x-grid3-hd-inner {
+.tw-activities-grid .x-grid3-cell-inner {
     white-space: normal;
 }
 
